# libffi

./: Makefile.am  configure.ac  meson.build
.github/workflows/: build.yml
include/: ffi_common.h  ffi_hidden.h  meson.build
msvc_build/aarch64/aarch64_include/: fficonfig.h
src/: closures.c  meson.build
src/aarch64/: meson.build  sysv.S
src/alpha/: meson.build  osf.S
src/arc/: meson.build
src/arm/: meson.build  sysv.S
src/avr32/: meson.build
src/bfin/: meson.build
src/cris/: meson.build
src/csky/: meson.build
src/frv/: meson.build
src/ia64/: meson.build
src/kvx/: meson.build
src/loongarch64/: meson.build
src/m32r/: meson.build
src/m68k/: meson.build
src/m88k/: meson.build
src/metag/: meson.build
src/microblaze/: meson.build
src/mips/: meson.build
src/moxie/: meson.build
src/or1k/: meson.build
src/pa/: meson.build
src/powerpc/: ffi_darwin.c  ffitarget.h  linux64_closure.S  meson.build  ppc_closure.S  sysv.S
src/riscv/: meson.build
src/s390/: meson.build  sysv.S
src/sh/: meson.build
src/sh64/: meson.build
src/sparc/: meson.build  v8.S
src/tile/: meson.build  tile.S
src/vax/: meson.build
src/wasm/: meson.build
src/x86/: ffi_cet.h  ffitarget.h  ffiw64.c  internal.h  internal64.h  meson.build  sysv.S  sysv_intel.S  unix64.S  win64.S  win64_intel.S
src/xtensa/: meson.build
testsuite/: meson.build
testsuite/libffi.bhaible/: meson.build
testsuite/libffi.call/: meson.build
testsuite/libffi.closures/: meson.build
testsuite/libffi.complex/: meson.build
testsuite/libffi.go/: meson.build
testsuite/libffi.threads/: meson.build
